// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NameValueList should accept and apply Grid props 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: repeat( auto-fit,minmax(auto,384px) );
  grid-gap: 48px 96px;
  justify-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
}

.c3 {
  margin-bottom: 3px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  font-weight: bold;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        name
      </dt>
      <dd
        class="c4"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        location
      </dt>
      <dd
        class="c4"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        health
      </dt>
      <dd
        class="c4"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto,384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
}

.c3 {
  margin-bottom: 3px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  font-weight: bold;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        name
      </dt>
      <dd
        class="c4"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        location
      </dt>
      <dd
        class="c4"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        health
      </dt>
      <dd
        class="c4"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render correct alignment of name 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto,384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
}

.c3 {
  margin-bottom: 3px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  font-weight: bold;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        name
      </dt>
      <dd
        class="c4"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        location
      </dt>
      <dd
        class="c4"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        health
      </dt>
      <dd
        class="c4"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render correct alignment of value 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto,384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 3px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  font-weight: bold;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        name
      </dt>
      <dd
        class="c4"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        location
      </dt>
      <dd
        class="c4"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        health
      </dt>
      <dd
        class="c4"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render correct gap between rows and columns 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto,384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
}

.c3 {
  margin-bottom: 3px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  font-weight: bold;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        name
      </dt>
      <dd
        class="c4"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        location
      </dt>
      <dd
        class="c4"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        health
      </dt>
      <dd
        class="c4"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render correct width of name 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto,384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
}

.c3 {
  margin-bottom: 3px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  font-weight: bold;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        name
      </dt>
      <dd
        class="c4"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        location
      </dt>
      <dd
        class="c4"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        health
      </dt>
      <dd
        class="c4"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render correct width of value 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto,96px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
}

.c3 {
  margin-bottom: 3px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  font-weight: bold;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        name
      </dt>
      <dd
        class="c4"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        location
      </dt>
      <dd
        class="c4"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        health
      </dt>
      <dd
        class="c4"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render correct width of value when value is array 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto,96px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
}

.c3 {
  margin-bottom: 3px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  font-weight: bold;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

<div
    class="c0"
  >
    <dl
      class="c1"
    >
      <div
        class="c2"
      >
        <dt
          class="c3"
        >
          name
        </dt>
        <dd
          class="c4"
        >
          entry
        </dd>
      </div>
      <div
        class="c2"
      >
        <dt
          class="c3"
        >
          location
        </dt>
        <dd
          class="c4"
        >
          San Francisco
        </dd>
      </div>
      <div
        class="c2"
      >
        <dt
          class="c3"
        >
          health
        </dt>
        <dd
          class="c4"
        >
          80
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`NameValueList should render name/value as a column when pairProps = { direction: 
    'column' } 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto,384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 3px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  font-weight: bold;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        name
      </dt>
      <dd
        class="c4"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        location
      </dt>
      <dd
        class="c4"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        health
      </dt>
      <dd
        class="c4"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render pairs in a grid when layout="grid" 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto,384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
}

.c3 {
  margin-bottom: 3px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  font-weight: bold;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        name
      </dt>
      <dd
        class="c4"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        location
      </dt>
      <dd
        class="c4"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        health
      </dt>
      <dd
        class="c4"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render value above name when pairProps = { direction: 
    'column-reverse' } 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto,384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
}

.c4 {
  margin-bottom: 3px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  font-weight: bold;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dd
        class="c3"
      >
        entry
      </dd>
      <dt
        class="c4"
      >
        name
      </dt>
    </div>
    <div
      class="c2"
    >
      <dd
        class="c3"
      >
        San Francisco
      </dd>
      <dt
        class="c4"
      >
        location
      </dt>
    </div>
    <div
      class="c2"
    >
      <dd
        class="c3"
      >
        80
      </dd>
      <dt
        class="c4"
      >
        health
      </dt>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should support custom theme 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto,192px) );
  grid-gap: 12px 24px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  font-weight: lighter;
}

.c3 {
  margin-bottom: 3px;
  font-size: 18px;
  line-height: 24px;
  color: #7D4CDB;
  font-weight: bold;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        name
      </dt>
      <dd
        class="c4"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        location
      </dt>
      <dd
        class="c4"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
      >
        health
      </dt>
      <dd
        class="c4"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;
